--- a/WEB1/Web.html
+++ b/WEB1/Web.html
@@ -51,7 +51,7 @@
     			<div class="row">
     				<div class="col-xl-5 col-lg-4 col-md-12" >
     					<div class="main-tittle">
-    						<h1>Автоматизированная <br>штукатурка стен</h1>
+    						<h1> <strong class="main-title">Автоматизированная</strong><br>штукатурка стен</h1>
     						<p class="main-subtitle">Идеально ровные стены</p>
     						<span>
     							Cтоимость работ <br> от <strong>300</strong> руб/м<<sup>2</sup>
