--- a/WEB1/Web.html
+++ b/WEB1/Web.html
@@ -63,7 +63,7 @@
     						</strong>
     					</div>
     				</div>
-    				<div class="col-xl-4 offset-xl-3 col-lg-5 offset-lg-2 col-md-8 offset-md-2">
+    				<div class="col-xl-4 offset-xl-3 col-lg-5 offset-lg-2 col-md-8 offset-md-2 col-xs-8 offset-xs-2">
     					<div class="main-form">
     						<h2 class="main-form-header">Для расчёта точной стоимости <br><strong>закажите выезд замерщика</strong></h2>
     						<label for="#">Ваше имя</label>
