--- a/WEB1/Web.html
+++ b/WEB1/Web.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
 
-    <title>Гипсолит</title>
+    <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     		<div class="header">
 
     			<div class="row">
-    				<div class="col-lg-2 col-md-4 col-sm-5">
+    				<div class="col-xl-2 col-lg-2 col-md-4 col-sm-5">
     					<div class="logo">
     				<img src="img/logo.png" alt="Гипсолит">
     			</div>
@@ -37,7 +37,7 @@
     				<div class="phone-block col-xl-2 offset-xl-5 col-lg-3 offset-lg-3 col-md-4 offset-md-1 col-sm-4 col-xs-12">
     					<a class="phone-link" href="#">+7 495 771 05 08</a>
     				</div>
-    				<div class="col-md-3 col-sm-3 col-xs-12">
+    				<div class=" col-md-3 col-sm-3 col-xs-12">
     					<div class="wrap">
     						<div class="wrap-block">
     							<button class="button btn-header popup-btn">
@@ -109,6 +109,63 @@
     			<p>Мы являемся структурным подразделением компании поставщика строительных смесей gicema.ru  и даём Вам самые 
 выгодные цены.</p>
     		</div>
+    		</div>
+    	</div>
+    </section>
+    <section class="prices">
+    	<div class="container">
+    		<div class="row">
+    			<div class="col-lg-4 offset-lg-4 section-header section-header_light">
+    				<h2>Цены</h2>
+    				<p>Выберите вариант который подходит вам:</p>
+    			</div>	
+    			<div class="col-lg-4">
+    				<button class="main-form-btn button" type="submit">Разщитать точную стоимость</button>
+    			</div>
+
+    		</div>
+    		<div class="row">
+    			<div class=" col-xl-4 col-lg-4 offset-lg-0 col-md-8 offset-md-2">
+    				<div class="prices-block">
+    					<h4>Штукатурка вашим материалом</h4>
+    					<img src="img/prices/1.png" alt="Штукатурка вашим материалом">
+    					<p>От<span> 300 </span>руб/м2</p>
+    					<ul>
+    						<li>Проведение работ</li>
+    						<li>Уборка</li>
+    					</ul>
+    					<button class="button">Заказать</button>
+    				</div>
+    			</div>
+    			<div class="col-xl-4 col-lg-4 offset-lg-0 col-md-8 offset-md-2">
+    				<div class="prices-block">
+    					<h4>Штукатурка под шпаклевку</h4>
+    					<img src="img/prices/2.png" alt="Штукатурка под шпаклевку">
+    					<p>От<span> 530 </span>руб/м2</p>
+    					<ul>
+    						<li>Завоз материала и его подем</li>
+    						<li>Проведение работ</li>
+    						<li>Уборка</li>
+    						<li>Гарантия 2 года</li>
+    					</ul>
+    					<button class="button">Заказать</button>
+    				</div>
+    			</div>
+    			<div class="col-xl-4 col-lg-4 offset-lg-0 col-md-8 offset-md-2">
+    				<div class="prices-block">
+    					<h4>Штукатурка под обои</h4>
+    					<img src="img/prices/3.png" alt="Штукатурка под обои">
+    					<p>От<span> 560 </span>руб/м2</p>
+    					<ul>
+    						<li>Завоз материала и его подем</li>
+    						<li>Проведение работ</li>
+    						<li>Уборка</li>
+    						<li>Гарантия 2 года</li>
+    						<li>Можно сразу клеить обои</li>
+    					</ul>
+    						<button class="button">Заказать</button>
+    				</div>
+    			</div>
     		</div>
     	</div>
     </section>
