--- a/WEB1/Web.html
+++ b/WEB1/Web.html
@@ -283,6 +283,61 @@
 </div>
 <img class="heand" src="img/feedback/hand.png" alt="heand">
     </section>
+
+
+    <section class="sheme">
+    	<div class="container">
+    		<div class="section-header sheme-section-header">
+    			<h2>Схема работы</h2>
+    			<p>Работа над вашим объектом будет включать в себя следующие этапы:</p>
+    		</div>
+    		
+    		<div class="sheme-content">
+    			<div class="row">
+    			<div class="col-xl-3 offset-xl-0 col-lg-3 offset-lg-0 col-md-4 offset-md-1 col-sm-4 offset-sm-0 col-12">
+    				<div class="sheme-block">
+    					<img src="img/sheme/1.png" alt="">
+    					<h4>Заявка</h4>
+    					<p>Оставляете онлайн заявку  или звоните +7 495 771 05 08</p>
+    				</div>
+    			</div>
+    			<div class="col-xl-3  offset-xl-1 col-lg-3 offset-lg-1 col-md-4 offset-md-3 col-sm-4 offset-sm-3 col-12">
+    				<div class="sheme-block">
+    					<img src="img/sheme/2.png" alt="">
+    					<h4>Выезд специалиста</h4>
+    					<p>В течение 1 рабочего дня к Вам приезжает специалист, который выполнит замеры для точной стоимости работ
+    					</p>
+    				</div>
+    			</div>
+    			<div class="col-xl-3 offset-xl-1 col-lg-3 offset-lg-1 col-md-4 offset-md-1 col-sm-4 offset-sm-0 col-12">
+    				<div class="sheme-block">
+    					<img src="img/sheme/3.png" alt="">
+    					<h4>Составление договора</h4>
+    					<p>Готовим договор и согласовываем с Вами
+    					</p>
+    				</div>
+    			</div>
+    			<div class="col-xl-3 offset-xl-0 col-lg-3 offset-lg-0 col-md-4 offset-md-3 col-sm-4 offset-sm-3 col-12">
+    				<div class="sheme-block">
+    					<img src="img/sheme/4.png" alt="">
+    					<h4>Начало работ	</h4>
+    					<p>Доставляем материалы, оборудование, подписываем договор и начинаем работы
+    					</p>
+    				</div>
+    			</div>
+    			<div class="col-xl-3  offset-xl-1 col-lg-3 offset-lg-1 col-md-4 offset-md-5  col-sm-4 offset-sm-0 col-12">
+    				<div class="sheme-block">
+    					<img src="img/sheme/5.png" alt="">
+    					<h4>Завершения работ</h4>
+    					<p>После окончания работ Вы проверяете качество и подписываете акт сдачи, производите оплату.
+    					</p>
+    				</div>
+    			</div>
+    		</div>
+    		<img class="sheme-heand" src="img/sheme/heand.png" alt="">
+    	</div>
+    	</div>
+    </section>
     
 <link rel="stylesheet"  href="slick/slick.css"/>
 <link rel="stylesheet"  href="slick/slick-theme.css"/>
