--- a/WEB1/Web.html
+++ b/WEB1/Web.html
@@ -338,6 +338,166 @@
     	</div>
     	</div>
     </section>
+
+    <section class="all-inclusive">
+    	<div class="container">
+    		<div class="section-header all-inclusive-header">
+    			<h2>Все на 100% включено</h2>
+    			<p>При выполнении работ с нашим материалом в стоимость входит:</p>
+    		</div>
+    		<div class="row">
+    			<div class="col-lg-3">
+    				<div class="media">
+    					<div class="media-left">
+    						<span class="circle-border">
+    							<span class="circle">
+    								1.
+    							</span>
+    						</span>	
+    					</div>
+  <div class="media-body all-inclusive-media">
+    <h4 class="mt-0">Материал:</h4>
+   <p>штукатурка, грунтовка или бетоноконтакт, маяки, сетка на стыки</p>
+  </div>
+</div>
+    			</div> 			<div class="col-lg-3">
+    				<div class="media">
+    					<div class="media-left">
+    						<span class="circle-border">
+    							<span class="circle">
+    								2.
+    							</span>
+    						</span>	
+    					</div>
+  <div class="media-body all-inclusive-media">
+    <h4 class="mt-0">Доставка оборудования и материала на объект
+</h4>
+   <p></p>
+  </div>
+</div>
+    			</div> 			<div class="col-lg-3">
+    				<div class="media">
+    					<div class="media-left">
+    						<span class="circle-border">
+    							<span class="circle">
+    								3.
+    							</span>
+    						</span>	
+    					</div>
+  <div class="media-body all-inclusive-media">
+    <h4 class="mt-0">Подготовка поверхности </h4>
+   <p>(очистка, грунтование)</p>
+  </div>
+</div>
+    			</div> 			<div class="col-lg-3">
+    				<div class="media">
+    					<div class="media-left">
+    						<span class="circle-border">
+    							<span class="circle">
+    								4.
+    							</span>
+    						</span>	
+    					</div>
+  <div class="media-body all-inclusive-media">
+    <h4 class="mt-0">Установка маяков</h4>
+   <p></p>
+  </div>
+</div>
+    			</div> 			<div class="col-lg-3">
+    				<div class="media">
+    					<div class="media-left">
+    						<span class="circle-border">
+    							<span class="circle">
+    								5.
+    							</span>
+    						</span>	
+    					</div>
+  <div class="media-body all-inclusive-media">
+    <h4 class="mt-0">Оштукатуривание поверхности
+</h4>
+   <p></p>
+  </div>
+</div>
+    			</div> 			<div class="col-lg-3">
+    				<div class="media">
+    					<div class="media-left">
+    						<span class="circle-border">
+    							<span class="circle">
+    								6.
+    							</span>
+    						</span>	
+    					</div>
+  <div class="media-body all-inclusive-media">
+    <h4 class="mt-0">Удаление маяков</h4>
+   <p></p>
+  </div>
+</div>
+    			</div> 			<div class="col-lg-3">
+    				<div class="media">
+    					<div class="media-left">
+    						<span class="circle-border">
+    							<span class="circle">
+    								7.
+    							</span>
+    						</span>	
+    					</div>
+  <div class="media-body all-inclusive-media">
+    <h4 class="mt-0">Глянцевание</h4>
+   <p></p>
+  </div>
+</div>
+    			</div> 			<div class="col-lg-3">
+    				<div class="media">
+    					<div class="media-left">
+    						<span class="circle-border">
+    							<span class="circle">
+    								8.
+    							</span>
+    						</span>	
+    					</div>
+  <div class="media-body all-inclusive-media">
+    <h4 class="mt-0">Уборка и вывоз мусора</h4>
+   <p></p>
+  </div>
+</div>
+    			</div>
+    		</div>
+    	</div>
+    </section>
+
+    <section class="problems">
+    	<div class="container">
+    		<div class="section-header">
+    			<h2>Мы развеем все опасения</h2>
+    		</div>	
+    		<div class="row">
+    			<div class="col-lg-5">
+    				<div class="problems-list problems-list-bad">
+    					<h4>Какие могут быть проблемы:</h4>
+    					<ul>
+    						<li>Стены и углы будут неровными</li>
+    						<li>Ремонт затянется на долгие месяцы</li>
+    						<li>Сложности с доставкой и разгрузкой материалов</li>
+    						<li>Останется мусор и пыль после работ</li>
+    					</ul>
+    				</div> 
+    			</div>
+    			<div class="col-lg-5 offset-lg-2">
+    					<div class="problems-list problems-list-good">
+    					<h4>Наше решение:</h4>
+    					<ul>
+    					<li>Высокая квалификация специалистов + минимум 5 летний опыт работы = идеально ровные поверхности</li>
+    					<li>Соблюдаем сроки, которые прописаны в договоре. На квартиру площадью 135 м2 уходит от 3 до 5 дней</li>
+    					<li>Доставка материала и подъём бесплатно</li>
+    					<li>Убираем и вывозим мусор после работ</li>
+
+    					</ul>
+    				</div> 
+    			</div>	
+    		</div>	
+    		<img class="problems-women" src="img/problems/woman.png" alt="">
+    	</div>
+    </section>
     
 <link rel="stylesheet"  href="slick/slick.css"/>
 <link rel="stylesheet"  href="slick/slick-theme.css"/>
