--- a/WEB1/Web.html
+++ b/WEB1/Web.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
 
-    <title>Гипсолит</title>
+    <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -496,6 +496,47 @@
     			</div>	
     		</div>	
     		<img class="problems-women" src="img/problems/woman.png" alt="">
+    	</div>
+    </section>
+
+    <section class="material">
+    	<div class="container">
+    		<div class=" section-header sheme-section-header">
+    			<h2>Материалы</h2>
+    			<p>Мы работаем только качественными, проверенными временем материалами, следующих производителей:</p>
+    		</div>	
+    		<div class="row">
+    			<div class="col-lg-3 material-block">
+    				<img src="img/material/1.png" alt="">
+    				<h3>Knauf</h3>
+    				<p>МП-75 245 руб/меш</p>
+    				<a href="#">Сертификат</a>
+    			</div>
+    			<div class="col-lg-3 material-block">
+    				<img src="img/material/2.png" alt="">
+    				<h3>Volma</h3>
+    				<p>Аква слой 245 руб/меш<br>
+Гипс актив 245 руб/меш</p>
+    				<a href="#">Сертификат</a>
+    			</div>
+    			<div class="col-lg-3 material-block">
+    				<img src="img/material/3.png" alt="">
+    				<h3>Forman</h3>
+    				<p>Аква слой 245 руб/меш<br>
+Гипс актив 245 руб/меш</p>
+    				<a href="#">Сертификат</a>
+    			</div>
+    			<div class="col-lg-3 material-block">
+    				<img src="img/material/4.png" alt="">
+    				<h3>Ceresit</h3>
+    				<p>Аква слой 245 руб/меш<br>
+Гипс актив 245 руб/меш</p>
+    				<a href="#">Сертификат</a>
+    			</div>
+    		</div>
+    		<div class="col-lg-12 material-footer text-center">
+    			<p>Вы можете приобрести материалы по оптовым ценам на сайте <a href="#">gicema.ru</a> или по телефону +7 495 790 69 90</p>
+    		</div>
     	</div>
     </section>
     
