--- a/WEB1/Web.html
+++ b/WEB1/Web.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Гипсолит</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -536,6 +536,61 @@
     		</div>
     		<div class="col-lg-12 material-footer text-center">
     			<p>Вы можете приобрести материалы по оптовым ценам на сайте <a href="#">gicema.ru</a> или по телефону +7 495 790 69 90</p>
+    		</div>
+    	</div>
+    </section>
+
+    <section class="toor">
+    	<div class="container">
+    		<div class="row">
+    			<div class="col-lg-4 offset-lg-0 col-md-6 offset-md-3 col-sm-8 offset-sm-2 col-10 offset-1 toor-content">
+    				<h2>Посмотрите как мы работаем</h2>
+    				<p>Хотите удостовериться в профессионализме наших сотрудников? </p>
+    				<p>Вы можете сделать это, приехав на один из наших объектов, и понаблюдав за ходом работ. Увидите оборудование, материалы и качество исполнения.</p>
+    			</div>
+    			<div class="col-lg-4 offset-lg-4 col-md-6 offset-md-3 col-sm-8 offset-sm-2 col-10 offset-1">
+    				<div class="main-form">
+    						<h2 class="main-form-header">Оставьте контактные данные <br>для связи</h2>
+    						<label for="#">Ваше имя</label>
+    						<input  class="main-form-input" type="text"></input>
+    						<label for="#">Номер телефона</label>
+    						<input class="main-form-input" type="text"></input>
+    						<button class="main-form-btn button" type="submit">записаться на просмотр</button>
+    						<small>Подберем ближайщий к вам объект</small>
+    					</div>
+    			</div>
+    		</div>
+    	</div>
+    </section>
+
+    <section class="upsell">
+    	<div class="container">
+    		<div class="section-header upsell-section-header">
+    			<h2>Дополнительные услуги</h2>
+    			<p>Помимо штукатурных рыбот Вы можете заказать у нас следующие услуги</p>
+    		</div>
+    		<div class="row">
+    			<div class="col-lg-4">
+    				<div class="upsell-box">
+    					<img src="img/upsell/1.png" alt="">
+    					<h4>Монтаж электропроводки</h4>
+    					<button class="button">Цены</button>
+    				</div>
+    			</div>
+    			<div class="col-lg-4">
+    				<div class="upsell-box">
+    					<img src="img/upsell/2.png" alt="">
+    					<h4>Стяжка пола</h4>
+    					<button class="button">Цены</button>
+    				</div>
+    			</div>
+    			<div class="col-lg-4">
+    				<div class="upsell-box">
+    					<img src="img/upsell/3.png" alt="">
+    					<h4>Сантехнические работы</h4>
+    					<button class="button">Цены</button>
+    				</div>
+    			</div>
     		</div>
     	</div>
     </section>
