--- a/WEB1/Web.html
+++ b/WEB1/Web.html
@@ -594,6 +594,60 @@
     		</div>
     	</div>
     </section>
+
+    <section class="contacs">
+    	<div class="container">
+    		<div class="row">
+    			<div class="col-lg-6  offset-lg-0  col-md-8 offset-md-2 col-sm-8 offset-sm-2 col-10 offset-1">
+    				<h3>Контакты</h3>
+    				<p>Адрес офиса:<br>
+    				улица Январского Прорыва, 9, Белая Церковь, Киевская область</p>
+    				<div class="map">
+    					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2574.2890249396123!2d30.07302181559152!3d49.81823277939303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d343c5d67c90f9%3A0x65c08af9dc0a9b9a!2z0YPQuy4g0K_QvdCy0LDRgNGB0LrQvtCz0L4g0J_RgNC-0YDRi9Cy0LAsIDksINCR0LXQu9Cw0Y8g0KbQtdGA0LrQvtCy0YwsINCa0LjQtdCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsIDA5MTAw!5e0!3m2!1sru!2sua!4v1594222619040!5m2!1sru!2sua" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    				</div>
+    				<p>Номер телефона: <br>
+    				 +7 495 771 05 08</p>
+    				<p>E-mail:<br>
+    				order@gipsolit.ru</p>
+    				<p>Реквизиты:<br>
+    				ИНН 35453453  ОГРН 34234234</p>
+    			</div>
+    			<div class="col-lg-4 offset-lg-2 col-md-8 offset-md-2 col-sm-10 offset-sm-1 col-10 offset-1">
+    				<div class="main-form">
+    						<h2 class="main-form-header">Оставьте контактные данные <br>для связи</h2>
+				<label for="#">Ваше имя</label>
+    						<input  class="main-form-input" type="text"></input>
+    						<label for="#">Номер телефона</label>
+    						<input class="main-form-input" type="text"></input>
+    						<label for="#">E-mail</label>
+    						<input class="main-form-input" type="text"></input>
+    						<label for="#">Сообщение</label>
+    						<textarea class="main-form-input" rows="3"></textarea>
+    						<button class="main-form-btn button" type="submit">Записатся на просмотр</button>
+
+			</div>
+    			</div>
+    		</div>
+    	</div>
+    </section>
+
+    <section class="footer">
+    	<div class="container">
+    		<div class="row">
+    			<div class="col-lg-3 col-md-4 col-sm-12 offset-md-0 text-center">
+    				<img src="img/logo.png" alt="Гипсолит">
+    		</div>
+    		<div class="col-lg-2 offset-lg-2 col-md-4 col-sm-12 offset-md-0 text-center">
+    			<p>+7 495 771 05 08</p>
+    			<p>order@gipsolit.ru<br>
+Пн-Пт: с 9:00 до 18:00</p>
+    		</div>
+    		<div class="col-lg-2 offset-lg-3 col-md-4 col-sm-12 offset-md-0 text-center">
+    			<img src="img/dev-logo.png" alt="Гипсолит">
+    		</div>
+    		</div>
+    	</div>
+    </section>
     
 <link rel="stylesheet"  href="slick/slick.css"/>
 <link rel="stylesheet"  href="slick/slick-theme.css"/>
