--- a/theyalow/index.html
+++ b/theyalow/index.html
@@ -14,6 +14,7 @@
 
 		<!-- Custom styles for this template -->
 		<link href="css/style.css" rel="stylesheet">
+		 <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 	</head>
 
 	<body>
@@ -50,6 +51,131 @@
 			</div>
 			</div>
 		</section>
+		<section class="services">
+			<div class="container">
+				<div class="section-header">
+					<h2>SERVECES</h2>
+					<img src="img/servisec/Shape.png" alt="">
+					<p>We offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
+				</div>
+				<div class="row">
+					<div class="col-lg-4">
+						<div class="services-block">
+							<img src="img/servisec/1.png" alt="">
+							<h3>Clean Typography</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="services-block">
+							<img src="img/servisec/2.png" alt="">
+							<h3>Rock Solid Code</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="services-block">
+							<img src="img/servisec/3.png" alt="">
+							<h3>Expert Support</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="aboutus">
+			<div class="container">
+				<div class="section-header">
+					<h2>ABOUT US</h2>
+					<img src="img/servisec/Shape.png" alt="">
+					<p>We offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
+				</div>
+				<div class="row">
+					<div class="col-lg-6">
+						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. At vero eos et accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor et dolore aliquyam erat. Lorem ipsum dolor sit amet. Lorem ipsum eat.</p>
+					</div>
+					<div class="col-lg-6">
+						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirtempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. At vero eos eaccusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor et dolore aliquyam erat. Loreipsum dolor sit amet. Lorem ipsum dolor et.</p>
+					</div>
+				</div>
+				<div class="aboutus-slick">
+					<div class="aboutus-slick-block">
+						<img src="img/aboutus/1.png" alt="">
+						<h3>Md. Khalil Uddin</h3>
+						<p>Head of Ideas</p>
+					</div>
+					<div class="aboutus-slick-block">
+						<img src="img/aboutus/2.png" alt="">
+						<h3>Rubel Miah</h3>
+						<p>Lead WordPress Developer</p>
+					</div>
+					<div class="aboutus-slick-block">
+						<img src="img/aboutus/3.png" alt="">
+						<h3>Shamim Mia</h3>
+						<p>Sr. Web Developer</p>
+					</div>
+					<div class="aboutus-slick-block">
+						<img src="img/aboutus/4.png" alt="">
+						<h3>John Doe</h3>
+						<p>Front-end Developer</p>
+					</div>
+				</div>
+
+			</div>
+
+		</section>
 		
+<link rel="stylesheet"  href="slick/slick.css"/>
+<link rel="stylesheet"  href="slick/slick-theme.css"/>
+ <script src="slick/slick.min.js"></script>
+<script>
+	
+$(document).ready(function(){
+ 
+$('.aboutus-slick').slick({
+  infinite: true,
+  slidesToShow: 4,
+  slidesToScroll: 1,
+   responsive: [
+   
+
+    {
+      breakpoint: 1200,
+      settings: {
+        slidesToShow: 3,
+        slidesToScroll: 1,
+        infinite: true,
+        prevArrow: '<button class="prev"></button>',
+        nextArrow:'<button class="next"></button>',
+       
+      }
+    },
+    {
+      breakpoint: 1024,
+      settings: {
+        slidesToShow: 2,
+        slidesToScroll: 2,
+          prevArrow: '<button class="prev"></button>',
+        nextArrow:'<button class="next"></button>',
+      }
+    },
+    {
+      breakpoint: 582,
+      settings: {
+        slidesToShow: 1,
+        slidesToScroll: 1,
+          prevArrow: '<button class="prev"></button>',
+        nextArrow:'<button class="next"></button>',
+      }
+    }
+    // You can unslick at a given breakpoint now by adding:
+    // settings: "unslick"
+    // instead of a settings object
+  ]
+});
+		
+});
+		
+</script>
 	</body>
 </html>
