--- a/theyalow/index.html
+++ b/theyalow/index.html
@@ -15,6 +15,8 @@
 		<!-- Custom styles for this template -->
 		<link href="css/style.css" rel="stylesheet">
 		 <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+		 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
 	</head>
 
 	<body>
@@ -100,9 +102,11 @@
 				</div>
 				<div class="aboutus-slick">
 					<div class="aboutus-slick-block">
-						<img src="img/aboutus/1.png" alt="">
+						<div class="aboutus-slick-block_red">
+							<img src="img/aboutus/1.png" alt="">
 						<h3>Md. Khalil Uddin</h3>
 						<p>Head of Ideas</p>
+						</div>
 					</div>
 					<div class="aboutus-slick-block">
 						<img src="img/aboutus/2.png" alt="">
@@ -124,58 +128,65 @@
 			</div>
 
 		</section>
+
+		<section class="work">
+			<div class="container">
+				<div class="section-header">
+					<h2>Later work</h2>
+					<img src="img/servisec/Shape.png" alt="">
+				</div>
+				<div class="work__nav">
+					<ul>
+						<li><button class="button work__nav__btn" filter="all">All</button></li>
+						<li><button class="button work__nav__btn" filter="branding">Branding</button></li>
+						<li><button class="button work__nav__btn" filter="design">Design</button></li>
+						<li><button class="button work__nav__btn" filter="development">Development</button></li>
+						<li><button class="button work__nav__btn" filter="strategy">Strategy</button></li>
+					</ul>
+						
+						<div class="row work__block">
+							<div filter="branding" class="col-lg-4 ">
+								<div class="work__block__item"><img src="img/work/1.png" alt=""></div>
+							</div>
+							<div filter="design" class="col-lg-4">
+								<div class="work__block__item"><img src="img/work/2.png" alt=""></div>
+							</div>
+							<div filter="strategy" class="col-lg-4">
+								<div class="work__block__item"><img src="img/work/3.png" alt=""></div>
+							</div>
+							<div filter="strategy" class="col-lg-4">
+								<div class="work__block__item"><img src="img/work/4.png" alt=""></div>
+							</div>
+							<div filter="branding" class="col-lg-4">
+								<div class="work__block__item"><img src="img/work/5.png" alt=""></div>
+							</div>
+							<div filter="development" class="col-lg-4">
+								<div class="work__block__item"><img src="img/work/6.png" alt=""></div>
+							</div>
+							<div filter="development" class="col-lg-4">
+								<div class="work__block__item"><img src="img/work/7.png" alt=""></div>
+							</div>
+							<div filter="design" class="col-lg-4">
+								<div class="work__block__item"><img src="img/work/8.png" alt=""></div>
+							</div>
+							<div filter="branding" class="col-lg-4">
+								<div class="work__block__item"><img src="img/work/9.png" alt=""></div>
+							</div>
+						</div>
+				</div>
+			</div>	
+			<div class="work__paralax">
+					<div class="work__paralax_red">
+						<p>Do you like OUR WORK so far?<br>Let's talk about YOUR PROJECT!</p>
+						<button class="work__paralax__button">Get in Touch</button>
+					</div>
+				</div>
+		</section>
 		
 <link rel="stylesheet"  href="slick/slick.css"/>
 <link rel="stylesheet"  href="slick/slick-theme.css"/>
  <script src="slick/slick.min.js"></script>
-<script>
-	
-$(document).ready(function(){
- 
-$('.aboutus-slick').slick({
-  infinite: true,
-  slidesToShow: 4,
-  slidesToScroll: 1,
-   responsive: [
-   
+ <script src="js/main.js"></script>
 
-    {
-      breakpoint: 1200,
-      settings: {
-        slidesToShow: 3,
-        slidesToScroll: 1,
-        infinite: true,
-        prevArrow: '<button class="prev"></button>',
-        nextArrow:'<button class="next"></button>',
-       
-      }
-    },
-    {
-      breakpoint: 1024,
-      settings: {
-        slidesToShow: 2,
-        slidesToScroll: 2,
-          prevArrow: '<button class="prev"></button>',
-        nextArrow:'<button class="next"></button>',
-      }
-    },
-    {
-      breakpoint: 582,
-      settings: {
-        slidesToShow: 1,
-        slidesToScroll: 1,
-          prevArrow: '<button class="prev"></button>',
-        nextArrow:'<button class="next"></button>',
-      }
-    }
-    // You can unslick at a given breakpoint now by adding:
-    // settings: "unslick"
-    // instead of a settings object
-  ]
-});
-		
-});
-		
-</script>
 	</body>
 </html>
