--- a/theyalow/index.html
+++ b/theyalow/index.html
@@ -238,6 +238,24 @@
 						</div>
 					</div>
 				</div>
+				<div id="Clients" class="post__client">
+					<div class="post__client-compani">
+						<div class="row">
+							<div class="col-lg-2 offset-lg-1 col-md-6 col-sm-6 col-6"><img src="img/post/1.png" alt=""></div>
+							<div class="col-lg-2 col-md-6 col-sm-6 col-6"><img src="img/post/2.png" alt=""></div>
+							<div class="col-lg-2 col-md-6 col-sm-6 col-6"><img src="img/post/3.png" alt=""></div>
+							<div class="col-lg-2 col-md-6 col-sm-6 col-6"><img src="img/post/4.png" alt=""></div>
+							<div class="col-lg-2 col-md-12 col-sm-12 col-12"><img src="img/post/5.png" alt=""></div>
+						</div>
+					</div>
+					<p>Hvaing placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus<br> Temporibus autem quibusdam et aut officiis debitis aut rerum”</p>
+					<h4>John Doe, Google Inc.</h4>
+					<div class="post__dottes">
+						<img src="img/post/dotts1.png" alt="">
+						<img src="img/post/dotts2.png" alt="">
+						<img src="img/post/dotts2.png" alt="">
+					</div>
+				</div>
 			</div>
 		</section>
 
