--- a/theyalow/index.html
+++ b/theyalow/index.html
@@ -13,7 +13,6 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 		<!-- Custom styles for this template -->
-		<link rel="stylesheet" href="css/StyleSass.css">
 		<link href="css/style.css" rel="stylesheet">
 		 <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 		 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -258,6 +257,53 @@
 				</div>
 			</div>
 		</section>
+		<section class="touch">
+			<div class="container">
+				<div class="section-header">
+					<h2>Get in touch</h2>
+					<img src="img/servisec/Shape.png" alt="">
+					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
+				</div>
+				<div class="row">
+					<div class="col-lg-4 col-md-3">
+						<div class="touch-block touch-block_1">
+							<h3>Address</h3>
+							<p>312, 7th Ave, New York </p>
+							<p>NY 101200, United States of America</p>
+						</div>
+						<div class="touch-block touch-block_2">
+							<h3>Hotline (24x7)</h3>
+							<p>+65 0052 300, +65 88251 210</p>
+							<p>+88 01723 511 340</p>
+						</div>
+						<div class="touch-block touch-block_3">							
+							<h3>E-mail</h3>
+							<p>shapedtheme@gmail.com</p>
+							<p>khalilkode@gmail.com</p>
+						</div>
+					</div>
+					<div class="col-lg-8 col-md-9 touch-input">
+						<input type="text" placeholder="Your name">
+						<input type="text" placeholder="Your E-mail">
+						<input type="text" placeholder="Your subject">
+						<input type="text" placeholder="Your Company name">
+						<textarea  rows="3" placeholder="Write your message"></textarea>
+						<button class="touch-btn">Send message</button>
+						<p>* We’ll contact you as as possible. We don’t reply on Monday.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer>
+			<img src="img/touch/twitter.png" alt="">
+			<img src="img/touch/twitter.png" alt="">
+			<img src="img/touch/twitter.png" alt="">
+			<img src="img/touch/twitter.png" alt="">
+
+			<p>© 2015 Startup, Designed by ShapedTheme</p>
+			<img class="shape" src="img/touch/chape.png" alt="">
+
+		</footer>
 
 		
 <link rel="stylesheet"  href="slick/slick.css"/>
