--- a/theyalow/index.html
+++ b/theyalow/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 		<!-- Custom styles for this template -->
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/Style.css" rel="stylesheet">
 		 <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 		 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
