--- a/Web5/index.html
+++ b/Web5/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/Style.css">
     <title>Cozy House</title>
 </head>
@@ -38,8 +42,9 @@
                     <div class="col-lg-5 col-12">
                         <h2>Не только людям
                             нужен дом</h2>
-                        <p>Не следует, однако забывать, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании форм развития.
-        
+                        <p>Не следует, однако забывать, что дальнейшее развитие различных форм деятельности обеспечивает
+                            широкому кругу (специалистов) участие в формировании форм развития.
+
                         </p>
                         <button>
                             Подружиться
@@ -54,9 +59,131 @@
 
         </div>
     </header>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <section class="about">
+        <div class="container">
+            <div class="about__content">
+                <div class="row">
+                    <div class="col-lg-3 offset-lg-2 col-12">
+                        <img src="img/header/Pets.png" alt="">
+                    </div>
+                    <div class="col-lg-5 offset-lg-1">
+                        <h2>О приюте <br>
+                            «Уютный Дом»</h2>
+                        <p>Значимость этих проблем настолько очевидна. Hас анализа модели развития. Повседневная
+                            практика показывает, что постоянный количественный рост и сфера нашей активности влечет за
+                            собой процесс внедрения и модернизации соответствующий условий активизации. Товарищи!
+                            постоянный количественный рост и сфера нашей активности играет важную роль в формировании
+                            существенных финансовых и административных условий. Значимость этих проблем настолько
+                            очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и
+                            модернизации направлений прогрессивного развития.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="friend">
+        <div class="container">
+            <div class="friend__header">
+                <h2>Наши друзья, которые ищут дом</h2>
+            </div>
+            <div class="friend__slick">
+
+                <div class="friend__block">
+                    <div class="friend__block-photo">
+                        <img src="img/header/Cat.png" alt="">
+                    </div>
+                    <h4>Katrine</h4>
+                    <button>Узнать больше</button>
+                </div>
+
+
+                <div class="friend__block">
+                    <div class="friend__block-photo">
+                        <img src="img/barni.png" width="200" alt="">
+                    </div>
+                    <h4>Barni</h4>
+                    <button>Узнать больше</button>
+                </div>
+
+
+                <div class="friend__block">
+                    <div class="friend__block-photo">
+                        <img src="img/header/Dog2.png" alt="">
+                    </div>
+                    <h4>Woody</h4>
+                    <button>Узнать больше</button>
+                </div>
+
+
+                <div class="friend__block">
+                    <div class="friend__block-photo">
+                        <img src="img/header/dog1.png" alt="">
+                    </div>
+                    <h4>Jennifer</h4>
+                    <button>Узнать больше</button>
+                </div>
+
+            </div>
+
+           <div class="friend__bottom">
+            <button>Узнай остальное</button>
+           </div>
+        </div>
+    </section>
+    <section class="help">
+        <div class="container">
+            <div class="help__header">
+                <h2>Чем ты можешь помочь
+                    нашему питомнику</h2>
+            </div>
+            <div class="help__content">
+                <div class="row">
+                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
+                        <img src="img/icon1.png" alt="">
+                        <h3>Корм для животных</h3>
+                    </div>
+                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
+                        <img src="img/icon2.png" alt="">
+                        <h3>Транспорт</h3>
+                    </div>
+                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
+                        <img src="img/icon3.png" alt="">
+                        <h3>Игрушки</h3>
+                    </div>
+                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
+                        <img src="img/icon4.png" alt="">
+                        <h3>Миски и чашки</h3>
+                    </div>
+                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
+                        <img src="img/icon5.png" alt="">
+                        <h3>Шампуни</h3>
+                    </div>
+                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
+                        <img src="img/icon6.png" alt="">
+                        <h3>Vitamins</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-1 offset-xl-3 col-lg-1 offset-lg-3 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12 offset-0">
+                        <img src="img/icon7.png" alt="">
+                        <h3>Лекарства</h3>
+                    </div>
+                    <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12 offset-0">
+                        <img src="img/icon9.png" alt="">
+                        <h3>Ошейники поводки</h3>
+                    </div>
+                    <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-4 offset-md-0 col-sm-12 offset-sm-0 col-12 offset-0">
+                        <img src="img/icon10.png" alt="">
+                        <h3>Спальный район</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <link rel="stylesheet" href="slick/slick.css" />
+    <link rel="stylesheet" href="slick/slick-theme.css" />
+    <script src="slick/slick.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
