--- a/Web5/index.html
+++ b/Web5/index.html
@@ -12,12 +12,13 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/Style.css">
     <title>Cozy House</title>
 </head>
 
 <body>
-    <header class="header">
+    <header data-aos="zoom-out-up" class="header">
         <div class="container">
             <div class="header__top">
                 <div class="row">
@@ -59,7 +60,7 @@
 
         </div>
     </header>
-    <section class="about">
+    <section data-aos="zoom-out-up" class="about">
         <div class="container">
             <div class="about__content">
                 <div class="row">
@@ -81,7 +82,7 @@
             </div>
         </div>
     </section>
-    <section class="friend">
+    <section data-aos="flip-up" class="friend">
         <div class="container">
             <div class="friend__header">
                 <h2>Наши друзья, которые ищут дом</h2>
@@ -125,12 +126,12 @@
 
             </div>
 
-           <div class="friend__bottom">
-            <button>Узнай остальное</button>
-           </div>
+            <div class="friend__bottom">
+                <button>Узнай остальное</button>
+            </div>
         </div>
     </section>
-    <section class="help">
+    <section data-aos="zoom-out-up" class="help">
         <div class="container">
             <div class="help__header">
                 <h2>Чем ты можешь помочь
@@ -138,41 +139,50 @@
             </div>
             <div class="help__content">
                 <div class="row">
-                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
+                    <div
+                        class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
                         <img src="img/icon1.png" alt="">
                         <h3>Корм для животных</h3>
                     </div>
-                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
+                    <div
+                        class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
                         <img src="img/icon2.png" alt="">
                         <h3>Транспорт</h3>
                     </div>
-                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
+                    <div
+                        class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
                         <img src="img/icon3.png" alt="">
                         <h3>Игрушки</h3>
                     </div>
-                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
+                    <div
+                        class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
                         <img src="img/icon4.png" alt="">
                         <h3>Миски и чашки</h3>
                     </div>
-                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
+                    <div
+                        class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
                         <img src="img/icon5.png" alt="">
                         <h3>Шампуни</h3>
                     </div>
-                    <div class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
+                    <div
+                        class="col-xl-1 offset-xl-1 col-lg-1 offset-lg-1 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12  offset-0">
                         <img src="img/icon6.png" alt="">
                         <h3>Vitamins</h3>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xl-1 offset-xl-3 col-lg-1 offset-lg-3 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12 offset-0">
+                    <div
+                        class="col-xl-1 offset-xl-3 col-lg-1 offset-lg-3 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12 offset-0">
                         <img src="img/icon7.png" alt="">
                         <h3>Лекарства</h3>
                     </div>
-                    <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12 offset-0">
+                    <div
+                        class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-4 offset-md-0 col-sm-6 offset-sm-0 col-12 offset-0">
                         <img src="img/icon9.png" alt="">
                         <h3>Ошейники поводки</h3>
                     </div>
-                    <div class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-4 offset-md-0 col-sm-12 offset-sm-0 col-12 offset-0">
+                    <div
+                        class="col-xl-1 offset-xl-2 col-lg-1 offset-lg-2 col-md-4 offset-md-0 col-sm-12 offset-sm-0 col-12 offset-0">
                         <img src="img/icon10.png" alt="">
                         <h3>Спальный район</h3>
                     </div>
@@ -180,6 +190,53 @@
             </div>
         </div>
     </section>
+    <section data-aos="zoom-out-up" class="donat">
+        <div class="container">
+            <div class="donat__content">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <img src="img/Dog.png" alt="">
+                    </div>
+                    <div class="col-lg-5">
+                        <h2>
+                            К тому же,
+                            вы можете сделать пожертвование
+                        </h2>
+                        <p>Название банка / Тип банковского счета</p>
+                        <p class="donat__cards">8380 2880 8028 8791 7435</p>
+                        <small>Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a
+                            ipsum at libero sagittis dignissim sed
+                            ac diam. Praesent ultrices maximus tortor et vulputate. Interdum
+                            et malesuada fames ac ante ipsum primis in faucibus. </small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer data-aos="zoom-out-up" class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="footer__contact">
+                        <h2>По вопросам
+                            и предложения</h2>
+                        <p class="footer__email">email@shelter.com</p>
+                        <p class="footer__number">+13 674 567 75 54</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 offset-lg-1">
+                    <div class="footer__position">
+                        <h2>Мы ждем
+                            для вашего визита</h2>
+                        <p>Boston, Central Street, 1st
+                            (Entrance from the store)</p>
+                        <p>London, South Park, 18st</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="slick/slick.css" />
     <link rel="stylesheet" href="slick/slick-theme.css" />
     <script src="slick/slick.min.js"></script>
