--- a/restarns/index.html
+++ b/restarns/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
@@ -97,8 +98,8 @@
                         </div>
                         <div class="menu__slick-item-block">
                             <div class="slick__header">
-                            <h3>BREAD BOARD PLATTER
-                            </h3>
+                                <h3>BREAD BOARD PLATTER
+                                </h3>
                             </div>
                             <div class="slick__price">
                                 <h4>30$</h4>
@@ -114,31 +115,31 @@
                             <div class="slick__header">
                                 <h3>STICKY CHIPOTLE CHICKEN
                                 </h3>
-                                </div>
-                                <div class="slick__price">
-                                    <h4>26$</h4>
-                                </div>
-                                <div class="slick__text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                        irure dolor</p>
-                                </div>
+                            </div>
+                            <div class="slick__price">
+                                <h4>26$</h4>
+                            </div>
+                            <div class="slick__text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor</p>
+                            </div>
                         </div>
                         <div class="menu__slick-item-block">
                             <div class="slick__header">
                                 <h3>SALT & PEPPER CALAMARI
                                 </h3>
-                                </div>
-                                <div class="slick__price">
-                                    <h4>14$</h4>
-                                </div>
-                                <div class="slick__text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                        irure dolor</p>
-                                </div>
+                            </div>
+                            <div class="slick__price">
+                                <h4>14$</h4>
+                            </div>
+                            <div class="slick__text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor</p>
+                            </div>
                         </div>
                     </div>
                     <div class="menu__slick-item">
@@ -146,61 +147,61 @@
                             <div class="slick__header">
                                 <h3>CLUCK & DUCK WINGS
                                 </h3>
-                                </div>
-                                <div class="slick__price">
-                                    <h4>18$</h4>
-                                </div>
-                                <div class="slick__text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                        irure dolor</p>
-                                </div>
+                            </div>
+                            <div class="slick__price">
+                                <h4>18$</h4>
+                            </div>
+                            <div class="slick__text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor</p>
+                            </div>
                         </div>
                         <div class="menu__slick-item-block">
                             <div class="slick__header">
                                 <h3>BEEF & BONE MARROW BON BONS
                                 </h3>
-                                </div>
-                                <div class="slick__price">
-                                    <h4>2$</h4>
-                                </div>
-                                <div class="slick__text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                        irure dolor</p>
-                                </div>
+                            </div>
+                            <div class="slick__price">
+                                <h4>2$</h4>
+                            </div>
+                            <div class="slick__text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor</p>
+                            </div>
                         </div>
                         <div class="menu__slick-item-block">
                             <div class="slick__header">
                                 <h3>GARLIC KING PRAWNS
                                 </h3>
-                                </div>
-                                <div class="slick__price">
-                                    <h4>36$</h4>
-                                </div>
-                                <div class="slick__text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                        irure dolor</p>
-                                </div>
+                            </div>
+                            <div class="slick__price">
+                                <h4>36$</h4>
+                            </div>
+                            <div class="slick__text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor</p>
+                            </div>
                         </div>
                         <div class="menu__slick-item-block">
                             <div class="slick__header">
                                 <h3>ANTIPASTI PLATE
                                 </h3>
-                                </div>
-                                <div class="slick__price">
-                                    <h4>16$</h4>
-                                </div>
-                                <div class="slick__text">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                                        irure dolor</p>
-                                </div>
+                            </div>
+                            <div class="slick__price">
+                                <h4>16$</h4>
+                            </div>
+                            <div class="slick__text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -212,6 +213,72 @@
         <div class="photo__block-2"></div>
         <div class="photo__block-3"></div>
     </section>
+    <section class="more">
+        <div class="container">
+            <div class="more_content">
+                <div class="more_content-res">
+                    <h3>Restaurant</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et</p>
+                </div>
+                <div class="more_content-block">
+                    <h3>Sitemap</h3>
+                    <ul>
+                        <li>What we do</li>
+                        <li>Who we are</li>
+                        <li>Projects</li>
+                    </ul>
+                </div>
+                <div class="more_content-block">
+                    <h3>Category</h3>
+                    <ul>
+                        <li>Concreting</li>
+                        <li>Decoration</li>
+                        <li>Building</li>
+                    </ul>
+                </div>
+                <div class="more_content-block">
+                    <h3>Menu</h3>
+                    <ul>
+                        <li>About us</li>
+                        <li>Services</li>
+                        <li>Projects</li>
+                    </ul>
+                </div>
+                <div class="more_content-contact">
+                    <h3>Contact Us</h3>
+                    <ul>
+                        <li class="contact-number">855-5564-65651</li>
+                        <li class="contact-adres">Adress streets City</li>
+                        <li class="contact-mail">your.mail@domains.com</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__content">
+                <div class="footer__develop">
+                  <h3>Copyrights free-psd-templates.com</h3>
+                </div>
+                <div class="footer__more">
+                 <a href="#">Support</a>
+                 <a href="#">Contact Us</a>
+                 <a href="#">Disclaimer</a>
+                 <a href="#">Add More</a>
+                </div>
+                <div class="footer__social">
+                     <img src="img/icon/__538.png" alt="">
+                     <img src="img/icon/__539.png" alt="">
+                     <img src="img/icon/__540.png" alt="">
+                     <img src="img/icon/__541.png" alt="">
+                     <img src="img/icon/__542.png" alt="">
+                     <img src="img/icon/__543.png" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
